# actovator-backend

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: build-deploy-acr.yml
src/app/: main.py
src/app/api/v1/: dependencies.py
src/app/api/v1/routers/: __init__.py  checkpointer_router.py  gsc_router.py
src/app/constants/: __init__.py
src/app/core/: config.py
src/app/db/: base.py
src/app/db/models/: __init__.py  auth_db_models.py
src/app/services/gsc/: gsc_initial.py  search_analytics.py
src/app/services/workflows/: main_state.py  main_workflow.py
src/app/services/workflows/prompts/: gsc_prompt.py
src/app/services/workflows/tools/: search_analytics_tools.py
src/app/utils/: models_utils.py
